Fix title alignment issue in Anime Cards for specific media queries.

--- a/src/pages/AnimeList/components/AnimeCards/AnimeCards.css
+++ b/src/pages/AnimeList/components/AnimeCards/AnimeCards.css
@@ -84,4 +84,7 @@
         display: flex;
         justify-content: center;
       }
+      .anime-card:has(.long-title):hover .anime-card-title{
+        font-size: 1rem; 
+      }
   }
